--- a/80days/templates/competitions/competitions.html
+++ b/80days/templates/competitions/competitions.html
@@ -5,6 +5,8 @@
   <p>Teams: {$ comps.user_info.teams $}</p>
   <p>Captains: {$ comps.user_info.captains $}</p>
 
+  <p>My comps: {$ comps.myCompetitions() $}
+
   <h2>Competitions in progress</h2>
   
   <ul>
